@@ -1,12 +1,12 @@
 <?php
 /**
  * Smarty Internal Plugin Compile Block
- * 
+ *
  * Compiles the {block}{/block} tags
- * 
+ *
  * @package Smarty
  * @subpackage Compiler
- * @author Uwe Tews 
+ * @author Uwe Tews
  */
 
 /**
@@ -15,10 +15,11 @@
 class Smarty_Internal_Compile_Block extends Smarty_Internal_CompileBase {
 	// attribute definitions
     public $required_attributes = array('name');
-    public $shorttag_order = array('name');
+	public $shorttag_order = array('name', 'hide');
+	public $optional_attributes = array('hide');
     /**
      * Compiles code for the {block} tag
-     * 
+     *
      * @param array $args array with attributes from parser
      * @param object $compiler compiler object
      * @return boolean true
@@ -36,12 +37,12 @@ class Smarty_Internal_Compile_Block extends Smarty_Internal_CompileBase {
         // set flag for {block} tag
         Smarty_Internal_TemplateCompilerBase::$inheritance = true;
         // must merge includes
-        $this->compiler->smarty->merge_compiled_includes = true; 
+        $this->compiler->smarty->merge_compiled_includes = true;
 
         $compiler->parser->current_buffer = new _smarty_template_buffer($compiler->parser);
         $compiler->has_code = false;
         return true;
-    } 
+    }
 
 
     static function saveBlockData($block_content, $block_tag, $template, $filepath)
@@ -49,12 +50,12 @@ class Smarty_Internal_Compile_Block extends Smarty_Internal_CompileBase {
     	$_rdl = preg_quote($template->smarty->right_delimiter);
         $_ldl = preg_quote($template->smarty->left_delimiter);
 
-        if (0 == preg_match("!({$_ldl}block\s+)(name=)?(\w+|'.*'|\".*\")(\s*?)?((append|prepend|nocache)(=true)?)?(\s*{$_rdl})!", $block_tag, $_match)) {
+		if (0 == preg_match("!({$_ldl}block\s+)(name=)?(\w+|'.*'|\".*\")(\s*?)?((append|prepend)?(\s*)?(hide)?)?(\s*{$_rdl})!", $block_tag, $_match)) {
             $error_text = 'Syntax Error in template "' . $template->source->filepath . '"   "' . htmlspecialchars($block_tag) . '" illegal options';
             throw new SmartyCompilerException($error_text);
         } else {
-            $_name = trim($_match[3], '\'"'); 
-            // replace {$smarty.block.child}
+            $_name = trim($_match[3], '\'"');
+            if ($_match[8] != 'hide' || isset($template->block_data[$_name])) {        // replace {$smarty.block.child}
             if (strpos($block_content, $template->smarty->left_delimiter . '$smarty.block.child' . $template->smarty->right_delimiter) !== false) {
                 if (isset($template->block_data[$_name])) {
                     $block_content = str_replace($template->smarty->left_delimiter . '$smarty.block.child' . $template->smarty->right_delimiter,
@@ -63,8 +64,8 @@ class Smarty_Internal_Compile_Block extends Smarty_Internal_CompileBase {
                 } else {
                     $block_content = str_replace($template->smarty->left_delimiter . '$smarty.block.child' . $template->smarty->right_delimiter,
                         '', $block_content);
-                } 
-            } 
+                }
+            }
             if (isset($template->block_data[$_name])) {
                 if (strpos($template->block_data[$_name]['source'], '%%%%SMARTY_PARENT%%%%') !== false) {
                     $template->block_data[$_name]['source'] =
@@ -73,22 +74,22 @@ class Smarty_Internal_Compile_Block extends Smarty_Internal_CompileBase {
                     $template->block_data[$_name]['source'] .= $block_content;
                 } elseif ($template->block_data[$_name]['mode'] == 'append') {
                     $template->block_data[$_name]['source'] = $block_content . $template->block_data[$_name]['source'];
-                } 
+                }
             } else {
                 $template->block_data[$_name]['source'] = $block_content;
-            } 
+            }
             if ($_match[6] == 'append') {
                 $template->block_data[$_name]['mode'] = 'append';
             } elseif ($_match[6] == 'prepend') {
                 $template->block_data[$_name]['mode'] = 'prepend';
             } else {
                 $template->block_data[$_name]['mode'] = 'replace';
-            } 
+            }
             $template->block_data[$_name]['file'] = $filepath;
         }
     }
-
-	static function compileChildBlock ($compiler, $_name = null)
+  
+    }	static function compileChildBlock ($compiler, $_name = null)
 	{
 		$_output = '';
         // if called by {$smarty.block.child} we must search the name of enclosing {block}
@@ -110,7 +111,7 @@ class Smarty_Internal_Compile_Block extends Smarty_Internal_CompileBase {
 		if (!isset($compiler->template->block_data[$_name])) {
        		return '';
 		}
-		$_tpl = new Smarty_Internal_template ('eval:' . $compiler->template->block_data[$_name]['source'], $compiler->smarty, $compiler->template, $compiler->template->cache_id, 
+		$_tpl = new Smarty_Internal_template ('eval:' . $compiler->template->block_data[$_name]['source'], $compiler->smarty, $compiler->template, $compiler->template->cache_id,
 		               $compiler->template->compile_id = null, $compiler->template->caching, $compiler->template->cache_lifetime);
 		$_tpl->properties['nocache_hash'] = $compiler->template->properties['nocache_hash'];
 		$_tpl->source->filepath = $compiler->template->block_data[$_name]['file'];
@@ -154,7 +155,7 @@ class Smarty_Internal_Compile_Block extends Smarty_Internal_CompileBase {
 class Smarty_Internal_Compile_Blockclose extends Smarty_Internal_CompileBase {
     /**
      * Compiles code for the {/block} tag
-     * 
+     *
      * @param array $args array with attributes from parser
      * @param object $compiler compiler object
      * @return string compiled code
@@ -163,7 +164,7 @@ class Smarty_Internal_Compile_Blockclose extends Smarty_Internal_CompileBase {
     {
         $this->compiler = $compiler;
         $this->smarty = $compiler->smarty;
-        $this->compiler->has_code = true; 
+        $this->compiler->has_code = true;
         // check and get attributes
         $_attr = $this->_get_attributes($args);
         $saved_data = $this->_close_tag(array('block'));
@@ -171,7 +172,8 @@ class Smarty_Internal_Compile_Blockclose extends Smarty_Internal_CompileBase {
         if (isset($compiler->template->block_data[$_name]) && !isset($compiler->template->block_data[$_name]['compiled'])) {
         	$_output = Smarty_Internal_Compile_Block::compileChildBlock($compiler, $_name);
         } else {
-            $_output = $compiler->parser->current_buffer->to_smarty_php();
+			$_output = isset($saved_data[0]['hide']) && !isset($compiler->template->block_data[$_name]['source'])
+				? '' : $compiler->parser->current_buffer->to_smarty_php();
             unset ($compiler->template->block_data[$_name]['compiled']);
         }
         // reset flags
@@ -182,6 +184,6 @@ class Smarty_Internal_Compile_Blockclose extends Smarty_Internal_CompileBase {
         // $_output content has already nocache code processed
         $compiler->suppressNocacheProcessing = true;
         return $_output;
-    } 
-} 
+    }
+}
 ?>
