@@ -1,4 +1,7 @@
 ===== SVN branch rodneyrehm  =====
+14/02/2011
+- added {block ... hide} option to supress block if no child is defined
+
 13/02/2011
 - update handling of recursive subtemplate calls
 - bugfix replace $smarty->triggerError() by exception in smarty_internal_resource_extends.php
